# multi_tenancy_media_management

./: .env.example  README.md  add_domain.py  pyproject.toml
src/core/: admin.py  models.py  urls.py  utils.py  views.py
src/core/migrations/: 0001_initial.py
src/core/templates/: document_list.html  upload.html
src/customers/: admin.py  models.py
src/customers/management/commands/: create_tenant_with_domain.py
src/customers/migrations/: 0001_initial.py
src/media_management/: asgi.py  settings.py  urls.py  wsgi.py
