[project]
name = "multitenant-encryption"
version = "0.1.0"
description = ""
authors = [
    {name = "MurungaOwen",email = "owenhood80@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "django-tenants (>=3.8.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "cryptography (>=45.0.4,<46.0.0)"
]

[tool.poetry]
packages = [{include = "multitenant_encryption", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
